<resources>
    <string name="app_name">DemoBansos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="beranda">Beranda</string>
    <string name="keranjang">Keranjang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="akun">Akun</string>
    <string name="timeline">Timeline</string>
    <string name="Timeline">TimeLine</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="QrScanner">Qr Scanner</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>