<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/beranda"
        android:title="@string/beranda" />


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/iconbar2"
        android:title="@string/keranjang" />

    <item
        android:id="@+id/qr_navigation"
        android:icon="@drawable/qrscanner"
        android:title="@string/qr_scanner" />


    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_baseline_timeline_24"
        android:title="@string/timeline" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/profile"
        android:title="@string/akun" />

</menu>